fix:refix styles, add page wrap

--- a/coffee-house/styles/home.css
+++ b/coffee-house/styles/home.css
@@ -5,12 +5,11 @@ html {
     border: 1px solid red;
 }*/
 body {
-    max-width: 1440px;
+    margin: 0;
     background-color: #E1D4C9;
-    margin: 0 auto;
     font-family: 'Inter', sans-serif;
-    padding: 20px 40px 40px;
 }
+    
 a {
     text-decoration: none;
     font-size: 16px;
@@ -30,6 +29,7 @@ h2 {
     text-align: center;
     color: #403F3D;
     margin: 0;
+    padding: 0;
 }
 h3 {
     margin: 0;
@@ -47,6 +47,11 @@ section {
 ul {
     list-style: none;
 }
+.page-wrap {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 20px 40px 40px;
+}
 .header {
     margin: 0 0 20px;
 }
@@ -55,16 +60,19 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 0;
 }
 .header-logo {
     border-style: none;
+}
+.nav-container {
+    display: flex;
+    justify-content: space-between;
 }
 .nav-menu {
 }
 .nav-list {
     display: flex;
-    justify-content: space-between;
     padding: 0;
 }
 .nav-item {
@@ -280,9 +288,12 @@ ul {
     max-width: 1440px;
     margin: 0 auto;
 }
+.about-wrap {
+    display: flex;
+    flex-direction: column;
+}
 .about-text {
     margin-bottom:40px;
-    text-align: start;
 }
 .about-text h2 {
     text-align: start;
@@ -290,17 +301,15 @@ ul {
 .about-images {
     display: flex;
     gap: 40px;
+    position: relative;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
-.about-images-column1 {
-    width: 100%;
+.about-images-column {
     gap: 40px;
-    display: grid;
+    display: flex;
+    flex-direction: column;
 
-}
-.about-images-column2 {
-    width: 100%;
-    gap: 40px;
-    display: grid;
 }
 .about-image-box-big {
     max-height: 590px;
